added fonts and finish css

--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> 
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
     <link
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./assets/fonts/stylesheet.css">
     <title>Card copy</title>
   </head>
   <body>
@@ -23,11 +20,10 @@
         <div class="flag-blue"></div>
         <div class="flag-yellow"></div>
       </div>
-      <h2> Збір коштів на авто</h2>
     </header>
     <section class="main-section">
       <div class="container">
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptas possimus optio quibusdam alias eligendi? Non omnis sequi similique dolor.</p>
+        
       </div>
     </section>
     <script src="./script.js"></script>
