--- a/index.html
+++ b/index.html
@@ -15,17 +15,24 @@
   </head>
   <body>
     <header class="header">
-       <div class="container">
-      <div class="flag-container">
+    </header>
+    <section class="main-section">
+        <article class="article">
+          <div class="goal-wrapper">
+            <h1>Мета -> 120 000 грн.</h1>
+        </article>
+        <article class="important-section">
+          <p>Будь-який донат та репост важливий!</p>
+        </article>
+    </section>
+    <footer class="footer">
+      <div class="container">
+       <div class="flag-container">
         <div class="flag-blue"></div>
         <div class="flag-yellow"></div>
       </div>
-    </header>
-    <section class="main-section">
-      <div class="container">
-        
-      </div>
-    </section>
+    </div>
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
