--- a/index.html
+++ b/index.html
@@ -24,6 +24,36 @@
         <article class="important-section">
           <p>Будь-який донат та репост важливий!</p>
         </article>
+        <article class="banks-list">
+          <p>Моно — Банка</p>
+          <a class="bank-link" href="https://send.monobank.ua/jar/FAVrNsByB?t=DonateZelenodolsk" target="_blank">
+            <span>Перейти</span>
+            <span>
+              <i class="fa-solid fa-arrow-right"></i>
+            </span>
+          </a>
+          <p>Моно (Румянцев Олександр)</p>
+          <a class="bank-link" href="https://send.monobank.ua/jar/FAVrNsByB?t=DonateZelenodolsk" target="_blank">
+            <span>5168 7427 2433 1057</span>
+            <span>
+              <i class="fa-regular fa-copy"></i>
+            </span>
+          </a>
+          <p>Приват (Павленко Геннадій Васильович)</p>
+          <a class="bank-link" href="https://send.monobank.ua/jar/FAVrNsByB?t=DonateZelenodolsk" target="_blank">
+            <span>5375 4141 2209 0292</span>
+            <span>
+              <i class="fa-regular fa-copy"></i>
+            </span>
+          </a>
+          <p>PayPal</p>
+          <a class="bank-link">
+            <span>Копіювати</span>
+            <span>
+              <i class="fa-regular fa-copy"></i>
+            </span>
+          </a>
+        </article>
     </section>
     <footer class="footer">
       <div class="container">
@@ -33,6 +63,7 @@
       </div>
     </div>
     </footer>
+    <script src="https://kit.fontawesome.com/cc96f23a4c.js" crossorigin="anonymous"></script>
     <script src="./script.js"></script>
   </body>
 </html>
