--- a/index.html
+++ b/index.html
@@ -1,69 +1,79 @@
 <!DOCTYPE html>
 <html lang="uk-UA">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-    />
-    <link
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./assets/fonts/stylesheet.css">
-    <title>Card copy</title>
-  </head>
-  <body>
-    <header class="header">
-    </header>
-    <section class="main-section">
-        <article class="article">
-          <div class="goal-wrapper">
-            <h1>Мета -> 120 000 грн.</h1>
-        </article>
-        <article class="important-section">
-          <p>Будь-який донат та репост важливий!</p>
-        </article>
-        <article class="banks-list">
-          <p>Моно — Банка</p>
-          <a class="bank-link" href="https://send.monobank.ua/jar/FAVrNsByB?t=DonateZelenodolsk" target="_blank">
-            <span>Перейти</span>
-            <span>
-              <i class="fa-solid fa-arrow-right"></i>
-            </span>
-          </a>
-          <p>Моно (Румянцев Олександр)</p>
-          <a class="bank-link" href="https://send.monobank.ua/jar/FAVrNsByB?t=DonateZelenodolsk" target="_blank">
-            <span>5168 7427 2433 1057</span>
-            <span>
-              <i class="fa-regular fa-copy"></i>
-            </span>
-          </a>
-          <p>Приват (Павленко Геннадій Васильович)</p>
-          <a class="bank-link" href="https://send.monobank.ua/jar/FAVrNsByB?t=DonateZelenodolsk" target="_blank">
-            <span>5375 4141 2209 0292</span>
-            <span>
-              <i class="fa-regular fa-copy"></i>
-            </span>
-          </a>
-          <p>PayPal</p>
-          <a class="bank-link">
-            <span>Копіювати</span>
-            <span>
-              <i class="fa-regular fa-copy"></i>
-            </span>
-          </a>
-        </article>
-    </section>
-    <footer class="footer">
-      <div class="container">
-       <div class="flag-container">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
+  <link <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./assets/fonts/stylesheet.css">
+  <title>Card copy</title>
+</head>
+
+<body>
+  <header class="header">
+  </header>
+  <section class="main-section">
+    <article class="article">
+      <div class="goal-wrapper">
+        <h1>Мета -> 120 000 грн.</h1>
+    </article>
+    <article class="important-section">
+      <p>Будь-який донат та репост важливий!</p>
+    </article>
+    <article class="banks-list">
+      <p>Моно — Банка</p>
+      <a class="bank-link" href="https://send.monobank.ua/jar/FAVrNsByB?t=DonateZelenodolsk" target="_blank">
+        <span>Перейти</span>
+        <span>
+          <i class="fa-solid fa-arrow-right"></i>
+        </span>
+      </a>
+      <p>Моно (Румянцев Олександр)</p>
+      <a class="bank-link btn-copy">
+        <span>5168 7427 2433 1057</span>
+        <span>
+          <i class="fa-regular fa-copy"></i>
+        </span>
+      </a>
+      <p>Приват (Павленко Геннадій Васильович)</p>
+      <a class="bank-link btn-copy">
+        <span>5375 4141 2209 0292</span>
+        <span>
+          <i class="fa-regular fa-copy"></i>
+        </span>
+      </a>
+      <p>PayPal</p>
+      <a class="bank-link btn-copy">
+        <span>Копіювати</span>
+        <span>
+          <i class="fa-regular fa-copy"></i>
+        </span>
+      </a>
+    </article>
+    <article class="description">
+      <h3>Збір коштів на авто</h3>
+      <p>Привіт друзі, в червні ми з вами збирали на авто, на Ізюмський напрямок, тоді мета була 80000 грн. Ми зібрали
+        83109 грн за 10 днів.
+        Авто служить по сьогоднішній день, хлопці постійно згадують всіх хто не залишився осторонь та допоміг. І ми
+        бачимо результат на Харківщині. У визволені Слобожанщини є ваш вклад, не забувайте про це!</p>
+    </article>
+    <article class="now-description">
+      <p>Тепер потрібна допомога пацанам котрі б‘ють російських окупантів на херсонському напрямку, а саме від сторони
+        Зеленодольська.</p>
+    </article>
+  </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="flag-container">
         <div class="flag-blue"></div>
         <div class="flag-yellow"></div>
       </div>
     </div>
-    </footer>
-    <script src="https://kit.fontawesome.com/cc96f23a4c.js" crossorigin="anonymous"></script>
-    <script src="./script.js"></script>
-  </body>
+  </footer>
+  <script src="https://kit.fontawesome.com/cc96f23a4c.js" crossorigin="anonymous"></script>
+  <script src="./script.js"></script>
+</body>
+
 </html>
