--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </a>
       <p>Приват (Павленко Геннадій Васильович)</p>
       <a class="bank-link btn-copy">
-        <span>5375 4141 2209 0292</span>
+        <span>4731 2196 5008 1353</span>
         <span>
           <i class="fa-regular fa-copy"></i>
         </span>
@@ -63,9 +63,17 @@
       <p>Тепер потрібна допомога пацанам котрі б‘ють російських окупантів на херсонському напрямку, а саме від сторони
         Зеленодольська.</p>
     </article>
+    <article class="article">
+      <div class="goal-wrapper">
+        <h1>Мета -> 120 000 грн.</h1>
+    </article>
   </section>
   <footer class="footer">
     <div class="container">
+      <p class="footer-description">
+        Будь-який донат важливий! Репост, важливий! Давайте допоможемо
+        нашим героям!
+      </p>
       <div class="flag-container">
         <div class="flag-blue"></div>
         <div class="flag-yellow"></div>
