--- a/index.html
+++ b/index.html
@@ -31,26 +31,26 @@
         </span>
       </a>
       <p>Моно (Румянцев Олександр)</p>
-      <a class="bank-link btn-copy">
+      <button type="submit" class="bank-link btn-copy" data-id="5168742724331057">
         <span>5168 7427 2433 1057</span>
         <span>
           <i class="fa-regular fa-copy"></i>
         </span>
-      </a>
+      </button>
       <p>Приват (Павленко Геннадій Васильович)</p>
-      <a class="bank-link btn-copy">
+      <button type="submit" class="bank-link btn-copy" data-id="4731219650081353">
         <span>4731 2196 5008 1353</span>
         <span>
           <i class="fa-regular fa-copy"></i>
         </span>
-      </a>
+      </button>
       <p>PayPal</p>
-      <a class="bank-link btn-copy">
+      <button type="submit" class="bank-link btn-copy" data-id="olekrumian@gmail.com">
         <span>Копіювати</span>
         <span>
           <i class="fa-regular fa-copy"></i>
         </span>
-      </a>
+      </button>
     </article>
     <article class="description">
       <h3>Збір коштів на авто</h3>
