--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
     </article>
     <article class="banks-list">
       <p>Моно — Банка</p>
-      <a class="bank-link" href="https://send.monobank.ua/jar/FAVrNsByB?t=DonateZelenodolsk" target="_blank">
+      <a class="bank-link" href="https://send.monobank.ua/jar/FAVrNsByB?t=DonateZelenodolsk">
         <span>Перейти</span>
         <span>
           <i class="fa-solid fa-arrow-right"></i>
         </span>
       </a>
       <p>Моно (Румянцев Олександр)</p>
-      <button type="submit" class="bank-link btn-copy" data-id="5168742724331057">
+      <button type="submit" class="bank-link btn-copy" data-id="5168742724331057" ">
         <span>5168 7427 2433 1057</span>
         <span>
-          <i class="fa-regular fa-copy"></i>
+          <i class=" fa-regular fa-copy"></i>
         </span>
       </button>
       <p>Приват (Павленко Геннадій Васильович)</p>
-      <button type="submit" class="bank-link btn-copy" data-id="4731219650081353">
+      <button type="submit" class="bank-link btn-copy" data-id="4731219650081353" ">
         <span>4731 2196 5008 1353</span>
         <span>
-          <i class="fa-regular fa-copy"></i>
+          <i class=" fa-regular fa-copy"></i>
         </span>
       </button>
       <p>PayPal</p>
-      <button type="submit" class="bank-link btn-copy" data-id="olekrumian@gmail.com">
+      <button type="submit" class="bank-link btn-copy" data-id="olekrumian@gmail.com" )">
         <span>Копіювати</span>
         <span>
           <i class="fa-regular fa-copy"></i>
