--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Мета -> 120 000 грн.</h1>
     </article>
     <article class="important-section">
-      <p>Будь-який донат та репост важливий!</p>
+      <p>Будь-яка сума донату та репост важливий!</p>
     </article>
     <article class="banks-list">
       <p>Моно — Банка</p>
