--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <section class="main-section">
     <article class="article">
       <div class="goal-wrapper">
-        <h1>Мета -> 120 000 грн.</h1>
+        <h1>Мета <i class="fa-solid fa-arrow-right"></i> 120 000 грн.</h1>
     </article>
     <article class="important-section">
       <p>Будь-яка сума донату та репост важливий!</p>
@@ -65,7 +65,7 @@
     </article>
     <article class="article">
       <div class="goal-wrapper">
-        <h1>Мета -> 120 000 грн.</h1>
+        <h1>Мета <i class="fa-solid fa-arrow-right"></i> 120 000 грн.</h1>
     </article>
   </section>
   <footer class="footer">
