--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="main-section">
       <article class="article">
         <div class="goal-wrapper">
-          <h1>42 686 / 120 000 грн.</h1>
+          <h1 class="title-sum">42 686 / 120 000 грн.</h1>
       </article>
       <article class="important-section">
         <p>Будь-яка сума донату та репост важливий!</p>
@@ -66,7 +66,7 @@
       </article>
       <article class="article">
         <div class="goal-wrapper">
-          <h2>42 686 / 120 000 грн.</h2>
+          <h2 class="subtitle-sum">42 686 / 120 000 грн.</h2>
       </article>
     </section>
     <footer class="footer">
