--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="main-section">
       <article class="article">
         <div class="goal-wrapper">
-          <h1 class="title-sum">42 686 / 120 000 грн.</h1>
+          <h1 class="title-sum">42 686/120 000 грн.</h1>
       </article>
       <article class="important-section">
         <p>Будь-яка сума донату та репост важливий!</p>
@@ -61,12 +61,22 @@
           бачимо результат на Харківщині. У визволені Слобожанщини є ваш вклад, не забувайте про це!</p>
       </article>
       <article class="now-description">
-        <p>Тепер потрібна допомога пацанам котрі б‘ють російських окупантів на херсонському напрямку, а саме від сторони
+        <p>Тепер потрібна допомога пацанам з <strong> 60 окремої піхотної бригади, 68 батальйону 9 роти 1
+            взводу</strong>,
+          котрі б‘ють
+          російських окупантів на херсонському напрямку, а саме від сторони
           Зеленодольська.</p>
+      </article>
+      <article class="description">
+        <p>Щоденні звіти можна побачити в моїх соцмережах:</p>
+        <span><i class="fa-brands fa-instagram"></i> <a href="https://www.instagram.com/olekrumian/"
+            class="description-link" target="_blank">Instagram</a></span>
+        <span><i class="fa-brands fa-facebook"></i> <a href="https://www.facebook.com/olekrumian/"
+            class="description-link" target="_blank">Facebook</a></span>
       </article>
       <article class="article">
         <div class="goal-wrapper">
-          <h2 class="subtitle-sum">42 686 / 120 000 грн.</h2>
+          <h2 class="subtitle-sum">42 686/120 000 грн.</h2>
       </article>
     </section>
     <footer class="footer">
