--- a/index.html
+++ b/index.html
@@ -69,10 +69,11 @@
       </article>
       <article class="description">
         <p>Щоденні звіти можна побачити в моїх соцмережах:</p>
-        <span><i class="fa-brands fa-instagram"></i> <a href="https://www.instagram.com/olekrumian/"
-            class="description-link" target="_blank">Instagram</a></span>
-        <span><i class="fa-brands fa-facebook"></i> <a href="https://www.facebook.com/olekrumian/"
-            class="description-link" target="_blank">Facebook</a></span>
+        <a href="https://www.instagram.com/olekrumian/" class="description-link" target="_blank">
+          <span><i class="fa-brands fa-instagram"></i>Instagram</span></a>
+        <a href="https://www.facebook.com/olekrumian/" class="description-link" target="_blank">
+          <span><i class="fa-brands fa-facebook"></i>Facebook</span>
+        </a>
       </article>
       <article class="article">
         <div class="goal-wrapper">
