--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
     <section class="main-section">
       <article class="article">
         <div class="goal-wrapper">
-          <h1 class="title-sum">44 446 <i class="fa-solid fa-caret-right"></i> 120 000 грн.</h1>
+          <h1 class="title-sum">0 <i class="fa-solid fa-caret-right"></i> 40 000 грн.</h1>
       </article>
       <article class="important-section">
         <p>Будь-яка сума донату та репост важливий!</p>
       </article>
       <article class="banks-list">
         <p>Моно — Банка</p>
-        <a class="bank-link" href="https://send.monobank.ua/jar/FAVrNsByB?t=DonateZelenodolsk">
+        <a class="bank-link" href="https://send.monobank.ua/jar/A2QkX6gWTs">
           <span>Перейти</span>
           <span>
             <i class="fa-solid fa-arrow-right"></i>
           </span>
         </a>
         <p>Моно (Румянцев Олександр)</p>
-        <button type="submit" class="bank-link btn-copy" data-id="5375411500237495" ">
-        <span>5375 4115 0023 7495</span>
+        <button type="submit" class="bank-link btn-copy" data-id="5375414122090292" ">
+        <span>5375 4141 2209 0292</span>
         <span>
           <i class=" fa-regular fa-copy"></i>
           </span>
@@ -54,11 +54,8 @@
         </button>
       </article>
       <article class="description">
-        <h3>Збір коштів на авто</h3>
-        <p>Привіт друзі, в червні ми з вами збирали на авто, на Ізюмський напрямок, тоді мета була 80000 грн. Ми зібрали
-          83109 грн за 10 днів.
-          Авто служить по сьогоднішній день, хлопці постійно згадують всіх хто не залишився осторонь та допоміг. І ми
-          бачимо результат на Харківщині. У визволені Слобожанщини є ваш вклад, не забувайте про це!</p>
+        <h3>Збір коштів на генератор</h3>
+        <p></p>
       </article>
       <article class="now-description">
         <p>Тепер потрібна допомога пацанам з <strong> 60 окремої піхотної бригади, 68 батальйону 9 роти 1
@@ -77,7 +74,7 @@
       </article>
       <article class="article">
         <div class="goal-wrapper">
-          <h2 class="subtitle-sum">44 446 <i class="fa-solid fa-caret-right"></i> 120 000 грн.</h2>
+          <h2 class="subtitle-sum">0 <i class="fa-solid fa-caret-right"></i> 40 000 грн.</h2>
       </article>
     </section>
     <footer class="footer">
