--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="main-section">
       <article class="article">
         <div class="goal-wrapper">
-          <h1 class="title-sum">0 <i class="fa-solid fa-caret-right"></i> 40 000 грн.</h1>
+          <h1 class="title-sum">0 <i class="fa-solid fa-caret-right"></i> 35 000 грн.</h1>
       </article>
       <article class="important-section">
         <p>Будь-яка сума донату та репост важливий!</p>
@@ -54,15 +54,16 @@
         </button>
       </article>
       <article class="description">
-        <h3>Збір коштів на генератор</h3>
+        <h3>Збір коштів на прилади нічного бачення</h3>
         <p></p>
       </article>
       <article class="now-description">
-        <p>Тепер потрібна допомога пацанам з <strong> 60 окремої піхотної бригади, 68 батальйону 9 роти 1
-            взводу</strong>,
-          котрі б‘ють
-          російських окупантів на херсонському напрямку, а саме від сторони
-          Зеленодольська.</p>
+        <p>У червні ми з вами, збирали на авто для <strong>92
+            бригади<a href="https://www.instagram.com/p/CeGEM9NsHGW/">(звіт)</a></strong> котра вибивала російську
+          наволоч з
+          харківщини. Тепер нашому другу і знайомому Віктору Мартиненко (з 92 бригади), потрібен прилад нічного бачення.
+          Збираємо на 2
+          одиниці, один поїде до нього, другий на південь, виконувати задачі водіїв котрі їздять "наосліп". </p>
       </article>
       <article class="description">
         <p>Щоденні звіти можна побачити в моїх соцмережах:</p>
@@ -74,7 +75,7 @@
       </article>
       <article class="article">
         <div class="goal-wrapper">
-          <h2 class="subtitle-sum">0 <i class="fa-solid fa-caret-right"></i> 40 000 грн.</h2>
+          <h2 class="subtitle-sum">0 <i class="fa-solid fa-caret-right"></i> 35 000 грн.</h2>
       </article>
     </section>
     <footer class="footer">
