--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
     <footer class="footer">
       <div class="container">
         <p class="footer-description">
-          Будь-який донат важливий! Репост, важливий! Давайте допоможемо
-          нашим героям!
+          Будь-який донат та репост, важливий!
         </p>
         <div class="flag-container">
           <div class="flag-blue"></div>
