--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="main-section">
       <article class="article">
         <div class="goal-wrapper">
-          <h1 class="title-sum">1700 <i class="fa-solid fa-caret-right"></i> 35 000 грн.</h1>
+          <h1 class="title-sum">1 700 <i class="fa-solid fa-caret-right"></i> 35 000 грн.</h1>
       </article>
       <article class="important-section">
         <p>Будь-яка сума донату та репост важливий!</p>
